# stereo-predictor

./: .gitignore  README.md  pyproject.toml
src/: config.py  data.py  model.py  train.py
